[project]
name = "python-app"
version = "0.1.0"
description = ""
authors = [
    {name = "htazi",email = "htazi@nuglif.com"}
]
package = [{include = "python_app", from = "src"},] 
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "openai (>=1.65.1,<2.0.0)",
    "fastapi (>=0.115.9,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
